[project]
name = "hed"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "AyeshaJalal", email = "ayeshajalal503@gmail.com" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
hed = "hed:main"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
